@@ -123,34 +123,7 @@ sub page {
      _categories($self, \$i, $v) if @{$v->{categories}};
      _relations($self, \$i, $v) if @{$v->{relations}};
      _anime($self, \$i, $v) if @{$v->{anime}};
-
-     # User options
-     if($self->authInfo->{id}) {
-       my $vote = $self->dbVoteGet(uid => $self->authInfo->{id}, vid => $v->{id})->[0];
-       my $wish = $self->dbWishListGet(uid => $self->authInfo->{id}, vid => $v->{id})->[0];
-       Tr ++$i % 2 ? (class => 'odd') : ();
-        td 'User options';
-        td;
-         Select id => 'votesel';
-          option $vote ? "your vote: $vote->{vote}" : 'not voted yet';
-          optgroup label => $vote ? 'Change vote' : 'Vote';
-           option value => $_, "$_ ($self->{votes}[$_-1])" for (reverse 1..10);
-          end;
-          option value => -1, 'revoke' if $vote;
-         end;
-         if(!$vote || $wish) {
-           br;
-           Select id => 'wishsel';
-            option $wish ? "wishlist: $self->{wishlist_status}[$wish->{wstat}]" : 'not on your wishlist';
-            optgroup label => $wish ? 'Change status' : 'Add to wishlist';
-             option value => $_, $self->{wishlist_status}[$_] for (0..$#{$self->{wishlist_status}});
-            end;
-            option value => -1, 'remove from wishlist';
-           end;
-         }
-        end;
-       end;
-     }
+     _useroptions($self, \$i, $v) if $self->authInfo->{id};
 
     end;
    end;
@@ -350,6 +323,39 @@ sub _anime {
         b ' ('.($self->{anime_types}[$_->{type}][0] eq 'unknown' ? '' : $self->{anime_types}[$_->{type}][0].', ').$_->{year}.')';
         txt "\n";
       }
+    }
+   end;
+  end;
+}
+
+
+sub _useroptions {
+  my($self, $i, $v) = @_;
+
+  my $vote = $self->dbVoteGet(uid => $self->authInfo->{id}, vid => $v->{id})->[0];
+  my $wish = $self->dbWishListGet(uid => $self->authInfo->{id}, vid => $v->{id})->[0];
+
+  Tr ++$$i % 2 ? (class => 'odd') : ();
+   td 'User options';
+   td;
+    if($vote || !$wish) {
+      Select id => 'votesel';
+       option $vote ? "your vote: $vote->{vote}" : 'not voted yet';
+       optgroup label => $vote ? 'Change vote' : 'Vote';
+        option value => $_, "$_ ($self->{votes}[$_-1])" for (reverse 1..10);
+       end;
+       option value => -1, 'revoke' if $vote;
+      end;
+      br;
+    }
+    if(!$vote || $wish) {
+      Select id => 'wishsel';
+       option $wish ? "wishlist: $self->{wishlist_status}[$wish->{wstat}]" : 'not on your wishlist';
+       optgroup label => $wish ? 'Change status' : 'Add to wishlist';
+        option value => $_, $self->{wishlist_status}[$_] for (0..$#{$self->{wishlist_status}});
+       end;
+       option value => -1, 'remove from wishlist';
+      end;
     }
    end;
   end;
