@@ -8,6 +8,7 @@
 	- Fixed error message when uploading VN images larger than 500kB
 	- Fixed 3 grammar mistakes related to singular/plural
 	- Don't show hidden release relations on producer pages
+	- Hide the vote dropdown on v+ pages when the VN is already on the wishlist
 
 2.1 - 2008-12-29
 	- Skin support
